--- a/action.yml
+++ b/action.yml
@@ -526,9 +526,11 @@ runs:
         echo "CA_GH_ACTION_ORYX_BUILDER_ENV_ARG=${CA_GH_ACTION_ORYX_BUILDER_ENV_ARG}" >> $GITHUB_ENV
 
     - name: Set build environment variables for builder invocation
+      if: ${{ inputs.appSourcePath != '' && env.CA_GH_ACTION_DOCKERFILE_PATH == '' && inputs.buildEnvironmentVariables != '' }}
       shell: bash
       run: |
-        for pair in ${{ inputs.buildEnvironmentVariables }}; do
+        CA_GH_ACTION_BUILD_ENV="${{ inputs.buildEnvironmentVariables }}"
+        for pair in ${CA_GH_ACTION_BUILD_ENV}; do
           CA_GH_ACTION_ORYX_BUILDER_ENV_ARG="${CA_GH_ACTION_ORYX_BUILDER_ENV_ARG} --env ${pair}"
           echo "CA_GH_ACTION_ORYX_BUILDER_ENV_ARG=${CA_GH_ACTION_ORYX_BUILDER_ENV_ARG}" >> $GITHUB_ENV
         done
